--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,32 @@
 {
-  "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
-  "customizations": {
-    "codespaces": {
-      "openFiles": [
-        "README.md",
-        "Hello.py"
+  "name": "Python 3",                                                    // 使用するプログラミング言語とバージョンを指定
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",     // Python 3.11 と Debian Bullseye を基にした Docker イメージを定義
+  "customizations": {                                                    // 開発環境のカスタマイズセクション
+    "codespaces": {                                                      // GitHub Codespaces に特有の設定
+      "openFiles": [                                                     // デフォルトで開くファイルのリスト
+        "README.md",                                                     // READMEファイル
+        "Hello.py"                                                       // Pythonスクリプトファイル
       ]
     },
-    "vscode": {
-      "settings": {},
-      "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance"
+    "vscode": {                                                          // Visual Studio Code のカスタマイズ
+      "settings": {},                                                    // 特定の設定のためのプレースホルダー
+      "extensions": [                                                    // インストールする Visual Studio Code の拡張機能リスト
+        "ms-python.python",                                              // Python サポートのための拡張機能
+        "ms-python.vscode-pylance"                                       // 改善された Python 言語サポートのための拡張機能
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-  "postAttachCommand": {
-    "server": "streamlit run Hello.py --server.enableCORS false --server.enableXsrfProtection false"
+  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'", // パッケージを更新およびインストールするためのコマンド
+  "postAttachCommand": {                                                 // コンテナにアタッチした後に実行するコマンド
+    "server": "streamlit run Hello.py --server.enableCORS false --server.enableXsrfProtection false" // 特定の設定で Streamlit サーバーを実行
   },
-  "portsAttributes": {
-    "8501": {
-      "label": "Application",
-      "onAutoForward": "openPreview"
+  "portsAttributes": {                                                   // ポートフォワーディングに関連する設定
+    "8501": {                                                            // ポート8501の設定
+      "label": "Application",                                            // ポートのラベル
+      "onAutoForward": "openPreview"                                     // ポートが自動フォワードされた時のアクション
     }
   },
-  "forwardPorts": [
-    8501
+  "forwardPorts": [                                                      // フォワードするポートのリスト
+    8501                                                                 // Streamlitアプリケーションのためのポート8501
   ]
 }
